feat(cots-update): migrate to Spring-boot 3.2.6